# MulleObjCExpatFoundation

./: .gitignore  .touch  CMakeDependencies.txt  CMakeLists.txt  CMakeSourcesAndHeaders.txt  MulleObjCExpatFoundation.sublime-project  README.md  RELEASENOTES.md  clib.json  package.json
.bootstrap/: repositories
.bootstrap/libexpat.build/: CMAKEFLAGS  OTHER_CPPFLAGS  dispense_headers_path
.github/workflows/: semgrep.yml
.mulle-env/share/: environment-project.sh  environment-share.sh
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh
.mulle/etc/project/: version-info.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: environment-project.sh
.mulle/share/sourcetree/: config
MulleObjCExpatFoundation.xcodeproj/: project.pbxproj
MulleObjCExpatFoundation.xcodeproj/xcshareddata/xcschemes/: Libraries.xcscheme
assets/dox/: TOC.md
cmake/: Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: CreateLoaderIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  LinkManifestC.cmake  OptimizedLinkObjC.cmake  StandaloneC.cmake  StartupC.cmake
cola/: description.md.bud  properties.plist
craftinfo/expat/: .mulle-make-build-dir  CMakeLists.txt  README.md
craftinfo/expat-craftinfo/: CMakeLists.txt  dispense-mapper.sh.windows
craftinfo/expat/definition.linux/set/: CMAKEFLAGS
craftinfo/expat/definition.windows/set/: CMAKEFLAGS
craftinfo/expat/definition/set/: CMAKEFLAGS
src/: MulleObjCExpatFoundation-standalone.m  MulleObjCExpatFoundation.c  MulleObjCExpatFoundation.h  MulleObjCExpatFoundation.m  MulleObjCExpatFoundationStandalone.m  MulleObjCExpatParser.h  MulleObjCExpatParser.m  MulleObjCLoader+Expat.m  MulleObjCLoader+MulleObjCExpatFoundation.h  MulleObjCLoader+MulleObjCExpatFoundation.m  MulleObjCPropertyListPrinting+XML.h  MulleObjCPropertyListPrinting+XML.m  MulleStandaloneObjCExpatFoundation.h  NSPropertyListSerialization+Expat.m  _MulleObjCExpatFoundation-import-private.h  _MulleObjCExpatFoundation-import.h  _MulleObjCExpatFoundation-include-private.h  _MulleObjCExpatFoundation-include.h  dependencies.inc  import-private.h  import.h  include-private.h  include.h  objc-loader.inc  objc-loader.sublime-workspace
src/generic/: include.h
src/reflect/: _MulleObjCExpatFoundation-export.h  _MulleObjCExpatFoundation-import-private.h  _MulleObjCExpatFoundation-import.h  _MulleObjCExpatFoundation-include-private.h  _MulleObjCExpatFoundation-include.h  _MulleObjCExpatFoundation-provide.h  _MulleObjCExpatFoundation-versioncheck.h  objc-loader.inc
test/: import.h  include.h
test/.mulle-sde/share/: mulle-test
test/.mulle-sourcetree/etc/: config
test/.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh
test/.mulle/etc/sourcetree/: config
test/.mulle/share/sde/: mulle-test
test/.mulle/share/sourcetree/: config
test/10_examples/: complex.m  complex2.m  simple.m
test/20_io/: parse-print.m  xml.plist
test/examples/: complex2.m  simple.m
tests/: build-test.sh  run-test.sh
tests/examples/: complex.m  complex2.m  simple.m
